--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Chaitanya Kapoor</title>
+  <title>Aryan Seth</title>
   
-  <meta name="author" content="Chaitanya Kapoor">
+  <meta name="author" content="Aryan Seth">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -18,38 +18,38 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Chaitanya Kapoor</name>
+                <name>Aryan Seth</name>
               </p>
               <p>
-              I am a post-baccalaureate research assistant at UC San Diego, advised by <a href="https://www.meenakshikhosla.com" target="_blank"> Prof. Meenakshi Khosla</a>. My work focuses on understanding the underlying neural representations of biological and artifical neural networks.
+              I am an undergraduate final year student majoring in Computer Science from BITS Pilani, Pilani Campus. At present I am working on my Bachelor's Thesis at DFKI Germany under <a href="https://datasciapps.de/author/sebastian-vollmer/" target="_blank"> Prof. Sebastian Vollmer</a> on Information Sharing in Structural Causal Bandits.
               </p>
               <p>
-              At present, I am also being mentored by <a href="https://talmopereira.com" target="_blank">Prof. Talmo Pereira</a> at the Salk Institute of Biological Sciences, where I am working on the development of pose estimation methods for quantification of animal behavior.
+              I am also presently mentored by <a href="https://web.bits-pilani.ac.in/pilani/pratiknarang/profile" target="_blank"> Prof. Pratik Narang</a> at BITS, where I am working on Alignment and Fairness in Deep Learning models.
                 </p>
                 <p>
-              I recently graduated from BITS Pilani, majoring in Electrical and Electronics Engineering. I was also a visiting student at the <a href="https://sensein.group" target="+blank">Senseable Intelligence Lab</a>, under the supervision of <a href="http://satra.cogitatum.org" target="_blank">Prof. Satrajit Ghosh</a>, where I completed my undergraduate thesis.
+              In the past, I have had the pleasure of working under <a href="https://www.asimtewari.com/" target="_blank"> Prof. Asim Tewari</a> where I worked on Transfer Learning to mitigate Chatter in CNC Machines. I also had the opportunity to work under <a href="https://class.ece.iastate.edu/arun/" target="_blank"> Prof. Arun K Somani</a> where I worked on Training Free Neural Architecture Search for hybrid CNN-Transformer Architectures.
               </p>
-               In the past, I have been mentored by <a href="https://www.media.mit.edu/people/raskar/overview/" target="_blank">Prof. Ramesh Raskar</a> at MIT Media Lab. I have also had the privilege of being a visiting student under the guidance of <a href="https://donglaiw.github.io" target="_blank">Prof. Donglai Wei</a> and <a href="https://syntheticneurobiology.org/people/display/71/11" target="_blank">Prof. Ed Boyden</a> at the <a href="https://mcgovern.mit.edu"> McGovern Institute of Brain Research</a>.               
+               
               <p>
-              My research interests lie at the intersection of Deep Learning and Neuroscience. Through this lens, my aim is to design biologically-constrained neural networks by reverse engineering underlying neural computations in mammalian brains.
+              My interests lie in mitigating the risks of Modern Deep Learning. Through this motivation, I work in fairness, model-based privacy, and causal inference. I am also interested in information-theoretic foundations of Machine Learning, and spend time studying allied fields such as Grokking and Unlearning.
               </p>
               <p style="text-align:center">
-                <a href="mailto:f20201219@pilani.bits-pilani.ac.in">Email</a> &nbsp/&nbsp
+                <a href="mailto:f20212221@pilani.bits-pilani.ac.in">Email</a> &nbsp/&nbsp
                 <a href="data/cv.pdf">CV</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?user=jE9EPsUAAAAJ&hl">Google Scholar</a> &nbsp/&nbsp
-                <a href='https://twitter.com/ckapoor07'>Twitter</a> &nbsp/&nbsp
-                <a href="https://github.com/ckapoor7">Github</a>
+                <a href="https://scholar.google.co.in/citations?user=qsAeUs8AAAAJ">Google Scholar</a> &nbsp/&nbsp
+                <a href='https://twitter.com/AryanSeth07'>Twitter</a> &nbsp/&nbsp
+                <a href="https://github.com/Aryan-Seth">Github</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/ck.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/ck.png" class="rounded-circle"></a>
+              <a href="images/aseth.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/aseth.png" class="rounded-circle"></a>
             </td>
           </tr>
         </tbody></table>
 
 
 
-                <hr class="soft">
+                <!-- <hr class="soft">
 
                 <!-- Publications -->
 
@@ -174,7 +174,7 @@
                 </div>
 
 
-                <hr class="soft">
+                <hr class="soft"> -->
 
                 <! -- Research Experience -->
 
