added image, cv

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/aseth.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/aseth.png" class="rounded-circle"></a>
+              <a href="images/aseth.jpeg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/aseth.jpeg" class="rounded-circle"></a>
             </td>
           </tr>
         </tbody></table>
