--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:f20212221@pilani.bits-pilani.ac.in">Email</a> &nbsp/&nbsp
-                <a href="data/cv.pdf">CV</a> &nbsp/&nbsp
+                <a href="data\\cv.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.co.in/citations?user=qsAeUs8AAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href='https://twitter.com/AryanSeth07'>Twitter</a> &nbsp/&nbsp
                 <a href="https://github.com/Aryan-Seth">Github</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/aseth.jpeg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/aseth.jpeg" class="rounded-circle"></a>
+              <a href="images\\aseth.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images\\aseth.png" class="rounded-circle"></a>
             </td>
           </tr>
         </tbody></table>
