--- a/index.html
+++ b/index.html
@@ -83,27 +83,27 @@
 
             
             <!--- New publication -->
-            <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
-                        <!-- <div class="effectfront" > -->
-                            <img class="effectfront" src='images\\icpr.png' width="150">
-                        <!-- </div> -->
-                    </td>
-                    <td style="padding:20px;width:75%;vertical-align:top">
-                            <papertitle><big>Balancing the Scales: Enhancing Fairness in Facial Expression Recognition with Latent Alignment</papertitle></big>
-                        <br>
-                        <p> Syed Sameen Ahmad Rizvi*, <b>Aryan Seth*</b>, Pratik Narang</p>
-                        <p>
-                        <em>International Conference on Pattern Recognition-24</em>
-                        </p>
-                        <p>
-                        <a href="data\\ICPR_Revision" target="_blank">Paper</a>
-                        </p>
-                    </td>
-                </tr>
+                <tr>
+                        <td style="padding:20px;width:25%;vertical-align:middle">
+                            <!-- <div class="effectfront" > -->
+                                <img class="effectfront" src='images\\icpr.png' width="150">
+                            <!-- </div> -->
+                        </td>
+                        <td style="padding:20px;width:75%;vertical-align:top">
+                                <papertitle><big>Balancing the Scales: Enhancing Fairness in Facial Expression Recognition with Latent Alignment</papertitle></big>
+                            <br>
+                            <p> Syed Sameen Ahmad Rizvi*, <b>Aryan Seth*</b>, Pratik Narang</p>
+                            <p>
+                            <em>International Conference on Pattern Recognition-24</em>
+                            </p>
+                            <p>
+                            <a href="data\\ICPR_Revision" target="_blank">Paper</a>
+                            </p>
+                        </td>
+                    </tr>
 
 
-                <!-- New Publication -->
+                    <!-- New Publication -->
 
                 <tr>
                     <td style="padding:20px;width:25%;vertical-align:middle">
@@ -119,7 +119,7 @@
                         <em> AAAI Conference on Artificial Intelligence</em>    
                         </p>
                         <p>
-                            Syed Sameen Ahmad Rizvi*, <b>Aryan Seth*</b>, Pratik Narang
+                            <a href="https://ojs.aaai.org/index.php/AAAI/article/view/30503/32638" target="_blank">Paper</a>
                         </p>
                     </td>
                 </tr>
