edits for image extensions

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <tr>
                     <td style="padding:20px;width:25%;vertical-align:middle">
                         <!-- <div class="effectfront" > -->
-                            <img class="effectfront" src='images\\aaai-img.jpeg' width="150">
+                            <img class="effectfront" src='images\\aaai-img.png' width="150">
                         <!-- </div> -->
                     </td>
                     <td style="padding:20px;width:75%;vertical-align:top">
@@ -138,7 +138,7 @@
 
         <tr>
             <td>
-                <p>Website Template borrowed from <a href="https://jonbarron.info/" target="_blank">Jon Barron</a>.</p>
+                <p>Website Template borrowed from <a href="https://jonbarron.info/" target="_blank">Jon Barron</a> and <a href="https://ckapoor07.github.io" target="_blank">Chaitanya Kapoor</a>.</p>
             </td>
         </tr>
         <tr>
