--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
             <p><em>(Hover over the image to magnify it)</em></p>
+            <p><em>* denotes joint first authorship</em></p>
 
 
             <tr>
@@ -70,7 +71,7 @@
                 <td style="padding:20px;width:75%;vertical-align:top">
                         <papertitle><big>SynthShield: Leveraging Synthetic Distributions to Enhance Privacy Against Membership Inference</papertitle></big>
                     <br>
-                    <p>Aryan Seth. Vishnu Hari</p>
+                    <p>Aryan Seth, Vishnu Hari</p>
                     <p>
                     <em>Under Review at Privacy Preserving Workshop at AAAI-25</em>
                     </p>
