adding privacy policy for chrome extension

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <a href="https://scholar.google.co.in/citations?user=qsAeUs8AAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href='https://twitter.com/AryanSeth07'>Twitter</a> &nbsp/&nbsp
                 <a href="https://github.com/Aryan-Seth">Github</a>
+                <a href="privacy.html">Privacy&nbsp;Policy</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
